# abacus

./: .gitignore  Cargo.toml  README.md  build.rs  diesel.toml  flake.nix
assets/scss/: custom.scss  main.scss
docs/: main.tex
frontend/: package-lock.json  package.json  tsconfig.app.json  tsconfig.tsbuildinfo  vite.config.temp.ts  vite.config.ts
frontend/src/: DrawEditor.tsx  DrawRoomAllocator.tsx  index.css  index.tsx  room_allocator.tsx
fuzz/: Cargo.toml
fuzz/fuzz_targets/: rankings_workload.rs
migrations/2025-08-19-212146_tab/: down.sql  up.sql
scripts/: abacus
src/: cmd.lalrpop  config.rs  lib.rs  main.rs  msg.rs  non_det.rs  schema.rs  state.rs  util_resp.rs  validation.rs
src/auth/: login.rs  mod.rs  register.rs
src/permission/: mod.rs
src/template/: mod.rs
src/test/: mod.rs  rankings_workload.rs
src/test/rankings_regressions/: r1.json
src/tournaments/: config.rs  create.rs  mod.rs  snapshots.rs  teams.rs  view.rs
src/tournaments/categories/: mod.rs
src/tournaments/categories/team/: mod.rs
src/tournaments/feedback/: mod.rs
src/tournaments/feedback/manage/: config.rs  mod.rs  table.rs
src/tournaments/feedback/public/: submit.rs
src/tournaments/manage/: config.rs  mod.rs  sidebar.rs  view.rs
src/tournaments/motions/: mod.rs
src/tournaments/participants/: mod.rs
src/tournaments/participants/manage/: constraints.rs  create_judge.rs  create_speaker.rs  create_team.rs  gen_private_url.rs  institution_selector.rs  manage_judge.rs  manage_private_urls.rs  manage_team.rs  mod.rs  team_form.rs
src/tournaments/participants/public/: mod.rs
src/tournaments/privateurls/: mod.rs  view.rs
src/tournaments/public/: view.rs
src/tournaments/rooms/: manage.rs  mod.rs
src/tournaments/rounds/: mod.rs  side_names.rs
src/tournaments/rounds/ballots/: aggregate.rs  common_ballot_html.rs  form.rs  form_components.rs  mod.rs  submission.rs
src/tournaments/rounds/ballots/manage/: edit.rs  mod.rs  overview.rs  view_ballot_set.rs
src/tournaments/rounds/ballots/public/: submit.rs
src/tournaments/rounds/draws/: mod.rs
src/tournaments/rounds/draws/manage/: cmd.lalrpop  create.rs  edit.rs  mod.rs  view.rs
src/tournaments/rounds/draws/manage/drawalgs/: general.rs  mod.rs  random.rs
src/tournaments/rounds/draws/public/: view.rs
src/tournaments/rounds/draws/rooms/: rooms.rs
src/tournaments/rounds/manage/: allocate.rs  briefing.rs  create.rs  draw_edit.rs  draw_view.rs  edit.rs  edit_draw_rooms.rs  mod.rs  motions.rs  results.rs  room_allocator.rs  setup.rs  view.rs
src/tournaments/rounds/manage/availability/: judges.rs  mod.rs  teams.rs
src/tournaments/rounds/results/: mod.rs
src/tournaments/standings/: mod.rs
src/tournaments/standings/compute/: history.rs  mod.rs
src/tournaments/standings/compute/metrics/: atss.rs  ballots.rs  draw_strength.rs  ds_wins.rs  mod.rs  n_times_specific_result.rs  points.rs  tss.rs
src/tournaments/standings/manage/: admin_team_standings.rs  mod.rs
src/tournaments/standings/public/: mod.rs
src/tournaments/view/: admin.rs
src/tournamentsim/: assertions.rs  extra_inputs.rs  harness.rs  inputs.rs  mod.rs
src/tournamentsim/fuzzer_inputs/: mod.rs
src/tournamentsim/regressions/: 53bc4b77764be3d2.json  5e3a4cdb7c310a40.json  7ac30aecdb5ffdaf.json  a633fc1777f8b51f.json  bee2ecfb0de2efff.json  c7b6bbb74ff5c56.json  cross_tournament_team_availability_all.json  dda7db76ef12f900.json  e515901743664c77.json  provided_failure.json  provided_failure_room.json
src/widgets/: actions.rs  alert.rs  mod.rs  non_public.rs
src/workloads/: mod.rs
src/workloads/fuzzer_inputs/: mod.rs
