[package]
name = "abacus"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
chrono = { version = "0.4.41", features = ["serde"] }
diesel = { version = "2.2.12", features = ["chrono", "r2d2", "sqlite"] }
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
good_lp = { version = "1.14.0", features = ["highs"], default-features = false }
hypertext = { version = "0.12.1", features = ["htmx", "rocket"] }
indexmap = "2.11.4"
itertools = "0.14.0"
lalrpop-util = { version = "0.22.2", features = ["lexer", "unicode"] }
once_cell = "1.21.3"
rand = "0.9.2"
rand_chacha = { version = "0.9.0", features = ["os_rng"] }
regex = "1.11.1"
rocket = { version = "0.5.1", features = ["secrets"] }
rocket_ws = "0.1.1"
rust_decimal = "1.37.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["macros", "rt", "rt-multi-thread"] }
toml = "0.9.7"
url = { version = "2.5.4", features = ["serde"] }
uuid = { version = "1.18.0", features = ["v4", "v7"] }

[build-dependencies]
lalrpop = "0.22.2"
