[package]
name = "abacus"
version = "0.1.0"
edition = "2024"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }

[dependencies]
argon2 = "0.5.3"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.51", features = ["derive"] }
csv = "1.4.0"
diesel = { version = "2.3.3", features = ["chrono", "r2d2", "sqlite"] }
diesel_migrations = { version = "2.3.0", features = ["sqlite"] }
good_lp = { version = "1.14.0", features = ["highs"], default-features = false }
hypertext = { version = "0.12.1", features = ["htmx"] }
indexmap = "2.12.0"
itertools = "0.14.0"
lalrpop-util = { version = "0.22.2", features = ["lexer", "unicode"] }
once_cell = "1.21.3"
rand = "0.9.2"
rand_chacha = { version = "0.9.0", features = ["os_rng"] }
regex = "1.12.2"
axum = { version = "0.7.5", features = ["macros", "ws"] }
axum-extra = { version = "0.9.3", features = ["cookie", "cookie-private", "form", "query"] }
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
rust_decimal = "1.39.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"
url = { version = "2.5.7", features = ["serde"] }
uuid = { version = "1.18.1", features = ["v4", "v7"] }
futures = "0.3.31"
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
ammonia = "4.1.2"
arbitrary = { version = "1.4.2", features = ["derive"] }
serde_urlencoded = "0.7.1"

[build-dependencies]
lalrpop = "0.22.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
