[package]
name = "abacus-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
tokio = { version = "1.48.0", features = ["full"] }

[dependencies.abacus]
path = ".."

[[bin]]
name = "rankings_workload"
path = "fuzz_targets/rankings_workload.rs"
test = true
doc = false
bench = false
